Fixing blog layout issues

--- a/css/framework.css
+++ b/css/framework.css
@@ -5450,11 +5450,9 @@ meta.foundation-mq-topbar {
   color: #666666;
 }
 .top-bar-section ul li.active > a {
-  background: white;
-  /* color: #00b991; */
 }
 .top-bar-section ul li.active > a:hover {
-  background: #f2f2f2;
+  /* background: #f2f2f2; */
   color: #666666;
 }
 .top-bar-section .has-form {
